feat: modemon、concurrently 效率工具安装

--- a/server/server.template.ejs
+++ b/server/server.template.ejs
@@ -8,8 +8,9 @@
   <%- style %>
 </head>
 <body>
-  <%- appString %>
-  <%- scripts %>
+    <div id="root">
+        <%- appString %>
+    </div>
 </body>
-
+<%- scripts %>
 </html>
